# data-architecture

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .jscpd.json  .lintr  .pre-commit-config.yaml  .python-black  .sqlfluff  .yamllint.yml  CCAO_Documentation.docx  CCAO_ETL_Documentation.docx  CCAO_POC_PART1_V1.0.yml  CCAO_POC_PART2_V1.0.yml  CCAO_POC_PART3_V1.0__1_.yml  Gini Measurement.Rmd  Map Version Edits.R  Map Version.R  README.md  Readme  Rscript.R  eda_new_sales_view.qmd  etl_config.yaml  geocoding_test.qmd  location-corners.R  poc_ccao_daily_glue_etl.py  pyproject.toml  spatial-corners-dan-UPDATED.R  spatial-corners-dan.R  temp.xlsx  test.py  test.sql  testing_file.R  testing_new_construction.R  testing_vacant.R  traffic.R
dbt/: .gitignore  .sqlfluff  README.md  dbt  dbt_project.yml  packages.yml  populate_descriptions.py  presentation.md  profiles.yml  pyproject.toml  requirements.txt  selectors.yml  unit_tests.md
dbt/Populate_211_and_212s/: usps_script.py
dbt/assets/: ccao-script.js  ccao-style.css  dataflow-diagram.mmd  sales-lineage.mmd
dbt/athena/: dbt_project.yml  profiles.yml
dbt/athena/macros/: log_results.sql
dbt/athena/models/: docs.md  schema.yml  vw_pin_sale_test.sql
dbt/export/templates/: assessed_and_market_values.xlsx  qc.vw_ic_reference_all_non_res_land_details.xlsx  qc.vw_ic_reference_all_non_res_pin_level_data.xlsx  qc.vw_ic_reference_all_non_res_pin_level_prior_year_vals.xlsx  qc.vw_ic_reference_all_towns_com_bldg_detail.xlsx  qc.vw_ic_reference_all_towns_oby_detail.xlsx  qc.vw_report_neg_asmt_value.xlsx  qc.vw_report_town_close_289s.xlsx  qc.vw_report_town_close_500k_increase_1m_decrease.xlsx  qc.vw_report_town_close_bldg_parcel_class_mismatch.xlsx  qc.vw_report_town_close_class_does_not_equal_luc.xlsx  qc.vw_report_town_close_neg_asmt_value.xlsx  qc.vw_report_town_close_ovrrcnlds_to_review.xlsx  qc.vw_report_town_close_prior_year_card_code_5s_comdat.xlsx  qc.vw_report_town_close_prior_year_card_code_5s_dweldat.xlsx  qc.vw_report_town_close_prior_year_card_code_5s_oby.xlsx  qc.vw_report_town_close_res_edit.xlsx  qc.vw_report_town_close_res_multicodes.xlsx  (+1 more)
dbt/macros/: .sqlfluff  aggregate_cdu.sql  all_predictors.sql  array_join.sql  assessment_progress_pin_count.sql  clean_address.sql  concat_address.sql  crosswalk_year_fill.sql  dist_to_nearest_geometry.sql  format_additional_select_columns.sql  generate_alias_name.sql  generate_schema_name.sql  get_s3_dependency_dir.sql  insert_hyphens.sql  log_results.sql  nearest_feature_aggregation.sql  nearest_neighbors.sql  nearest_pin_neighbors.sql  open_data_columns.sql  open_data_join_rows_to_delete.sql  open_data_rows_to_delete.sql  pre_stage_filters.sql  process_data.sql  res_report_summarize_sales.sql  res_report_summarize_values.sql  res_report_summary.sql  row_count_by_group.sql  row_count_by_year.sql  slugify.sql  split_data.sql  summarize_res_report_summary.sql
dbt/macros/tests/: test_all.sql  utils.sql  (+8 more)
dbt/models/: .sqlfluff  overview.md  shared_columns.md  vw_pin_appeal_test.sql  vw_pin_condo_char_test.sql  vw_pin_history_test.sql
dbt/scripts/: check_sort.py  check_sort_column_names.py  check_sort_data_tests.py  check_sort_dbt_yaml_files.py  check_sort_docs_headings.py  constants.py  export_models.py  export_qc_town_close_reports.py  qc_report.py  requirements.export_models.txt  requirements.socrata_upload.txt  requirements.transform_dbt_test_results.txt  run_iasworld_data_tests.py  socrata_upload.py  transform_dbt_test_results.py
dbt/tests/: .sqlfluff
(+1790 files in other folders)
